# pharmacy

./: MEDICINE_INVENTORY.xlsx  README.md  billing.py  customerorder.py  displayinvoicereport.py  displaystockreport.py  inventoryupdate.py  invoice_19092022003108  invoice_SP21092022212648  invoice_SP21092022213157  invoice_SP21092022213755  invoice_SP22092022001215  invoice_SP22092022132249  invoice_SP22092022154655  invoices.xlsx  invoiceupdate.py  main.py  medicine_inventory.xlsx  pharmadrugs.py  placingcustomerorder.py  pyproject.toml  sample_all_medicins_info.json  searchdrugs.py  searchdrugs_excel.py  searchdrugs_json.py  setup.py  steffspharmacy.sh
output/main/: medicine_inventory.xlsx
src/steffs_pharmacy/: billing.py  customerorder.py  displayinvoicereport.py  displaystockreport.py  inventoryupdate.py  invoices.xlsx  invoiceupdate.py  main.py  medicine_inventory.xlsx  placingcustomerorder.py  searchdrugs.py
src/steffs_pharmacy.egg-info/: PKG-INFO  SOURCES.txt
src/steffs_pharmacy/data/: invoice_SP23092022121400  invoice_SP23092022233034  invoice_SP24092022005922  invoice_SP24092022101958  invoice_SP24092022115848  invoice_SP24092022120034  invoice_SP24092022160310  invoice_SP24092022160509  invoice_SP25092022103921  invoice_SP25092022104544  invoice_SP25092022105145  invoice_SP25092022105547  invoice_SP25092022110035  invoice_SP25092022110524  invoice_SP25092022110937  invoice_SP25092022112318  invoice_SP25092022114003  invoice_SP25092022122137  invoice_SP25092022125102  (+2 more)
steffs_pharmacy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: TestCases.xlsx
(+3 files in other folders)
