[project]
name = "steffs_pharmacy"
version = "0.0.3"
authors = [
  { name="Steffy Johnson", email="steffycherian17@gmail.com" },
]
dependencies = [
    "pandas",
    "openpyxl",
    "pip",
    "time",
    "clearing",
    "rich",
    "re"
]
description = "Steffs Pharmacy"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]

